eks-lab-manifest/02_app/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-pod
    image: busybox:1.36
    command: 
      - sh
      - -c
      - sleep 3600
      
    volumeMounts:
      - name: data
        mountPath: /data
    resources:
      requests:
        cpu: "50m"
        memory: "64Mi"
      limits:
        cpu: "200m"
        memory: "128Mi"
      

  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: ebs-test-pvc
