eks-lab-manifest/02_app/service.yaml
# this service file is just a simple service for a demo app to practice some eks lab

apiVersion: v1
kind: Service
metadata:
  name: devops-lab-service
spec:
  selector: 
    app: devops-lab-app
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
